--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,11 @@ venv.bak/
 logs-*/
 training_data/
 
+
+datasets/
+
+tacotron_output/eval/
+
+tacotron_output/natural/
+
+tacotron_datasets/output/natural/
